--- a/spring-demo/build.gradle
+++ b/spring-demo/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     compile(project(":spring-context-support"))
+    compile(project(":spring-aspects"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
